// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedPlaceholder component should render correctly with default skeleton 1`] = `
<div>
  <div
    class="animated-placeholder"
  >
    <div
      class="animated-placeholder__image"
    />
    <div
      class="animated-placeholder__text"
    >
      <div
        class="animated-placeholder__text-line"
      />
      <div
        class="animated-placeholder__text-line"
      />
      <div
        class="animated-placeholder__text-line"
      />
      <div
        class="animated-placeholder__text-line"
      />
    </div>
  </div>
</div>
`;

exports[`AnimatedPlaceholder component should support passing loader skeleton from outside 1`] = `
<div>
  <div
    class="animated-placeholder"
  >
    <div
      class="animated-placeholder__image"
    />
  </div>
</div>
`;
